fixed alignment in tables

--- a/frontend/src/components/GameView/RoundView.css
+++ b/frontend/src/components/GameView/RoundView.css
@@ -114,6 +114,8 @@
     }
 
     .table-row .player-name-field {
+        display: flex;
+        justify-content: center;
         background-color: #c23331;
         font-weight: bold;
     }
